--- a/Solution/style.css
+++ b/Solution/style.css
@@ -78,7 +78,7 @@ nav ul li a {
 
 input[type="text"], .search-bar input[type="text"] {
     padding: 8px;
-    width: 300px; /* Ancho específico para la barra de búsqueda */
+    width: 300px; 
 }
 
 button, .search-bar button {
@@ -188,6 +188,7 @@ button, .search-bar button {
     border-radius: 8px;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border: 1px solid #E65100;
 }
 
 .product-card:hover {
@@ -224,18 +225,21 @@ button, .search-bar button {
 }
 
 .product-card button {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #ffffff;
+    color: #367C2B;
     border: none;
     padding: 10px 20px;
     width: 100%;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 20px;
     font-size: 1em;
+    border: 1px solid #E65100;  
+
 }
 
 .product-card button:hover {
-    background-color: #367C2B;
+    background-color: rgb(246, 222, 194);
+    
 }
 
 
