--- a/Solution/style.css
+++ b/Solution/style.css
@@ -5,23 +5,23 @@ body, html {
     color: #333;
 }
 
+/*Header superior*/
 header {
     background-color: #f7f7f7;
     padding: 10px 20px;
-}
-
-.logo {
-    font-family: 'Arial', sans-serif;
-    color: #76b852; 
-    font-size: 3em; 
-    font-weight: bold; 
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 .header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.logo {
+    font-family: 'Arial', sans-serif;
+    color: #76b852; 
+    font-size: 3em; 
+    font-weight: bold; 
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 nav ul {
@@ -42,6 +42,7 @@ nav ul li a {
     font-weight: bold;
     display: block;
 }
+
 
 .dropdown-content {
     display: none;
@@ -141,12 +142,15 @@ button, .search-bar button {
     background-color: #367c39; 
 }
 
+/*tarjetas de soporte*/
+
 .features-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     gap: 20px; 
     padding: 20px;
     background-color: #fff; 
+    
 }
 
 .feature-item {
@@ -155,6 +159,8 @@ button, .search-bar button {
     padding: 20px;
     border-radius: 10px; 
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    cursor: pointer;
+
 }
 
 .feature-item img {
@@ -173,6 +179,8 @@ button, .search-bar button {
     font-size: 0.9em; 
 }
 
+
+/* Grid de tarjetas*/
 .product-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -180,6 +188,8 @@ button, .search-bar button {
     padding: 20px;
     background-color: #f9f9f9; 
 }
+
+/*tarjetas de productos*/
 
 .product-card {
     background: linear-gradient(to bottom, #ffffff 0%, #f9f9f9 100%);
@@ -196,6 +206,7 @@ button, .search-bar button {
     box-shadow: 0 4px 12px rgba(0,0,0,0.2);
 }
 
+/* elementos de tarjetas, imagen, información, precio */
 .product-card img {
     width: 100%;
     height: 200px; 
@@ -224,6 +235,8 @@ button, .search-bar button {
     margin: 10px 0 20px;
 }
 
+/*botón de las targetas*/
+
 .product-card button {
     background-color: #ffffff;
     color: #367C2B;
@@ -240,6 +253,43 @@ button, .search-bar button {
 .product-card button:hover {
     background-color: rgb(246, 222, 194);
     
+}
+
+
+/*header de productos (filtro)*/ 
+
+.product-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #f9f9f9; 
+}
+
+.product-header h2 {
+    color: #333; 
+    font-size: 24px; 
+}
+
+.product-filters {
+    display: flex;
+    gap: 10px; 
+}
+
+.filter-button {
+    padding: 8px 16px;
+    background-color: #ffffff; 
+    border: 2px solid #76b852;
+    border-radius: 20px; 
+    color: #76b852;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.filter-button:hover, .filter-button.active {
+    background-color: #76b852;
+    color: #ffffff;
 }
 
 
